T2D kegg ko analysis

--- a/ipynb/log2foldchange_CI_5_95_deseq2.ipynb
+++ b/ipynb/log2foldchange_CI_5_95_deseq2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "77cca770",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "a2fafea9",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "167f1a68",
    "metadata": {
     "scrolled": true
@@ -50,9 +50,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "id": "df1b2f32",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -254,13 +256,228 @@
        "[100 rows x 9 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "table_t2d_negative"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "5a61813b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>baseMean</th>\n",
+       "      <th>log2FoldChange</th>\n",
+       "      <th>lfcSE</th>\n",
+       "      <th>stat</th>\n",
+       "      <th>pvalue</th>\n",
+       "      <th>padj</th>\n",
+       "      <th>CI_5</th>\n",
+       "      <th>CI_95</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>469</th>\n",
+       "      <td>CAG-115 sp003531585</td>\n",
+       "      <td>778.526916</td>\n",
+       "      <td>5.327748</td>\n",
+       "      <td>0.749688</td>\n",
+       "      <td>7.106622</td>\n",
+       "      <td>1.189178e-12</td>\n",
+       "      <td>1.633705e-10</td>\n",
+       "      <td>3.858387</td>\n",
+       "      <td>6.797110</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>845</th>\n",
+       "      <td>CAG-882 sp003486385</td>\n",
+       "      <td>5282.901165</td>\n",
+       "      <td>4.120153</td>\n",
+       "      <td>0.377608</td>\n",
+       "      <td>10.911184</td>\n",
+       "      <td>1.019198e-27</td>\n",
+       "      <td>9.801283e-25</td>\n",
+       "      <td>3.380054</td>\n",
+       "      <td>4.860251</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>705</th>\n",
+       "      <td>CAG-492 sp000434335</td>\n",
+       "      <td>3276.782732</td>\n",
+       "      <td>4.025576</td>\n",
+       "      <td>0.572755</td>\n",
+       "      <td>7.028441</td>\n",
+       "      <td>2.088544e-12</td>\n",
+       "      <td>2.738841e-10</td>\n",
+       "      <td>2.902997</td>\n",
+       "      <td>5.148156</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2313</th>\n",
+       "      <td>Phascolarctobacterium_A succinatutens</td>\n",
+       "      <td>1093.846126</td>\n",
+       "      <td>3.660719</td>\n",
+       "      <td>0.463923</td>\n",
+       "      <td>7.890787</td>\n",
+       "      <td>3.002877e-15</td>\n",
+       "      <td>5.775533e-13</td>\n",
+       "      <td>2.751446</td>\n",
+       "      <td>4.569991</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>863</th>\n",
+       "      <td>COE1 sp001916965</td>\n",
+       "      <td>7478.924771</td>\n",
+       "      <td>3.347001</td>\n",
+       "      <td>0.326072</td>\n",
+       "      <td>10.264606</td>\n",
+       "      <td>1.017356e-24</td>\n",
+       "      <td>5.870143e-22</td>\n",
+       "      <td>2.707911</td>\n",
+       "      <td>3.986090</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3070</th>\n",
+       "      <td>UBA7173 sp900540205</td>\n",
+       "      <td>109.695850</td>\n",
+       "      <td>1.122721</td>\n",
+       "      <td>0.333970</td>\n",
+       "      <td>3.361747</td>\n",
+       "      <td>7.745095e-04</td>\n",
+       "      <td>5.700153e-03</td>\n",
+       "      <td>0.468153</td>\n",
+       "      <td>1.777290</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2619</th>\n",
+       "      <td>Roseburia sp900756925</td>\n",
+       "      <td>750.969671</td>\n",
+       "      <td>1.056431</td>\n",
+       "      <td>0.301074</td>\n",
+       "      <td>3.508875</td>\n",
+       "      <td>4.500071e-04</td>\n",
+       "      <td>3.910454e-03</td>\n",
+       "      <td>0.466337</td>\n",
+       "      <td>1.646526</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2486</th>\n",
+       "      <td>Prevotellamassilia sp900546605</td>\n",
+       "      <td>276.564489</td>\n",
+       "      <td>1.462312</td>\n",
+       "      <td>0.515849</td>\n",
+       "      <td>2.834767</td>\n",
+       "      <td>4.585917e-03</td>\n",
+       "      <td>2.304942e-02</td>\n",
+       "      <td>0.451266</td>\n",
+       "      <td>2.473357</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2430</th>\n",
+       "      <td>Prevotella sp900543975</td>\n",
+       "      <td>1384.570985</td>\n",
+       "      <td>1.156385</td>\n",
+       "      <td>0.365340</td>\n",
+       "      <td>3.165231</td>\n",
+       "      <td>1.549598e-03</td>\n",
+       "      <td>9.868850e-03</td>\n",
+       "      <td>0.440332</td>\n",
+       "      <td>1.872437</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2613</th>\n",
+       "      <td>Roseburia sp003483745</td>\n",
+       "      <td>3311.528069</td>\n",
+       "      <td>1.166619</td>\n",
+       "      <td>0.371608</td>\n",
+       "      <td>3.139382</td>\n",
+       "      <td>1.693046e-03</td>\n",
+       "      <td>1.061835e-02</td>\n",
+       "      <td>0.438281</td>\n",
+       "      <td>1.894957</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                 Unnamed: 0     baseMean  log2FoldChange  \\\n",
+       "469                     CAG-115 sp003531585   778.526916        5.327748   \n",
+       "845                     CAG-882 sp003486385  5282.901165        4.120153   \n",
+       "705                     CAG-492 sp000434335  3276.782732        4.025576   \n",
+       "2313  Phascolarctobacterium_A succinatutens  1093.846126        3.660719   \n",
+       "863                        COE1 sp001916965  7478.924771        3.347001   \n",
+       "...                                     ...          ...             ...   \n",
+       "3070                    UBA7173 sp900540205   109.695850        1.122721   \n",
+       "2619                  Roseburia sp900756925   750.969671        1.056431   \n",
+       "2486         Prevotellamassilia sp900546605   276.564489        1.462312   \n",
+       "2430                 Prevotella sp900543975  1384.570985        1.156385   \n",
+       "2613                  Roseburia sp003483745  3311.528069        1.166619   \n",
+       "\n",
+       "         lfcSE       stat        pvalue          padj      CI_5     CI_95  \n",
+       "469   0.749688   7.106622  1.189178e-12  1.633705e-10  3.858387  6.797110  \n",
+       "845   0.377608  10.911184  1.019198e-27  9.801283e-25  3.380054  4.860251  \n",
+       "705   0.572755   7.028441  2.088544e-12  2.738841e-10  2.902997  5.148156  \n",
+       "2313  0.463923   7.890787  3.002877e-15  5.775533e-13  2.751446  4.569991  \n",
+       "863   0.326072  10.264606  1.017356e-24  5.870143e-22  2.707911  3.986090  \n",
+       "...        ...        ...           ...           ...       ...       ...  \n",
+       "3070  0.333970   3.361747  7.745095e-04  5.700153e-03  0.468153  1.777290  \n",
+       "2619  0.301074   3.508875  4.500071e-04  3.910454e-03  0.466337  1.646526  \n",
+       "2486  0.515849   2.834767  4.585917e-03  2.304942e-02  0.451266  2.473357  \n",
+       "2430  0.365340   3.165231  1.549598e-03  9.868850e-03  0.440332  1.872437  \n",
+       "2613  0.371608   3.139382  1.693046e-03  1.061835e-02  0.438281  1.894957  \n",
+       "\n",
+       "[100 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "table_t2d_positive"
    ]
   },
   {
